--- a/index.html
+++ b/index.html
@@ -61,25 +61,21 @@
         </a>
     </div>
     <section id="inicio" class="container-fluid">
-        
-        <h3 class="verde center">Somos un equipo de jóvenes profesionales unidos, por una historia en común, para crear, impulsar y revitalizar las necesidades creativas de las organizaciones.</h3>
+        <h3 class="blanco center">Somos un equipo de jóvenes profesionales unidos, por una historia en común, para crear, impulsar y revitalizar las necesidades creativas de las organizaciones.</h3>
         <a href="pages/quienesomos.html" class="buttons button__green center">Conocenos</a>
     </section>
     <section id="ultimos" class="sec container-fluid">
             <h2 class="verde center">Últimos Trabajos</h2>
             <article class="portfolio_grid">
-                <div class="newjob newjobs1"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs2"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs3"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs4"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs5"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs6"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs7"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs8"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs9"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs10"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs11"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs12"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
+                <div class="newjob newjobs1"><h6 class="portfolio__text center verde">Marca para Tedec Group</h6></div>
+                <div class="newjob newjobs2"><h6 class="portfolio__text center verde">Presentación para Acapulco</h6></div>
+                <div class="newjob newjobs3"><h6 class="portfolio__text center verde">Feed de Instagram Let It Be</h6></div>
+                <div class="newjob newjobs4"><h6 class="portfolio__text center verde">Piezas para redes Teclab</h6></div>
+                <div class="newjob newjobs5"><h6 class="portfolio__text center verde">Piezas para redes Lavapp</h6></div>
+                <div class="newjob newjobs6"><h6 class="portfolio__text center verde">Presentación para Fundación Pensar</h6></div>
+                <div class="newjob newjobs7"><h6 class="portfolio__text center verde">Presentación para Axxon</h6></div>
+                <div class="newjob newjobs8"><h6 class="portfolio__text center verde">Página web Meta ntildeo_design_logo_marca_branding</h6></div>
+                <div class="newjob newjobs9"><h6 class="portfolio__text center verde">Branding MvON Digital</h6></div>
             </article>
             <article class="sec flex">
                 <a href="pages/portfolio.html" class="buttons button__green center">Ver más</a>
