--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -66,17 +66,17 @@
     <section class="sec container-fluid">
         <div class="row trio">
             <div class="perfil col-md-3">
-                <img class="retrato" src="../assets/Frame2.png">
+                <img class="retrato" src="../assets/estudio_tangente_design_servicios_branding.jpg">
                 <h4 class="verde center">Branding</h4>
                 <h6 class="beige center">Diseño de identidad institucional para que te destaques de tu competencia.</h6>
             </div>
             <div class="perfil col-md-3">
-                <img class="retrato" src="../assets/Frame2.png">
+                <img class="retrato" src="../assets/estudio_tangente_design_servicios_web-design.jpg">
                 <h4 class="verde center">Sitios Web</h4>
                 <h6 class="beige center">Diseño y programación de sitios web modernos y atractivos para todas las plataformas.            </h6>
             </div>
             <div class="perfil col-md-3">
-                <img class="retrato" src="../assets/Frame2.png">
+                <img class="retrato" src="../assets/estudio_tangente_design_servicios_motion-graphics.jpg">
                 <h4 class="verde center">Motion Graphics</h4>
                 <h6 class="beige center">Diseño de identidad institucional para que te destaques de tu competencia.</h6>
             </div>
