--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta name="geo.placename" content="Buenos Aires" />
     <meta name="geo.position" content="-34.587401;-58.428726" />
     <meta name="ICBM" content="-34.587401, -58.428726" />
+    <meta name="keywords" content="tangente diseño, tangente diseno, tangentediseño, tangentediseno, estudio de diseño, diseño grafico, diseño web, marketing online, animacion, estudio de diseño grafico, estudio de diseño web, estudio de animacion, Buenos Aires, Argentina, Cintia Olave, Belen Santis, Gisela Drezek, Johanna Gonzalez, Fererico Ulicki, Ezequiel Garcia, diseñador, diseño, bienal, diseño grafico, comunicación visual, impresiones, imprenta, packaging, gigantografias, publicidad, agencia, via publica, estampados, ploteos, flyer, flyers, flayer, flayers, volantes, editorial, web, hosting,  diseño, design, impresiones, eventos, promociones, marketing, comunicacion estrategica, digital, marketing digital, imagen corporativa, diseño integral, comunicacion, compañía, pop, point of purchase, multimedia, interactivo, ilustraciones, retoque fotografico, fotografia, comunicacion, agencia de comunicacion, agencias de publicidad, publicidad promocion, master diseño web, diseño editorial, diseño digital, diseño industrial, diseño 3d, trade marketing, imagen corporativa, estudios diseño grafico, master diseño grafico, visual communications, stand, stands, estands, mkt, banner, baner, banners, baners">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"></link>
     <link rel="stylesheet" href="css/animate.css">
@@ -108,51 +109,51 @@
             </div>
             <div class="c2" id="final">
                 <div class="card card__grisC col-12">
-                    <img src="assets/redonda_a_sacar.png">
+                    <img src="assets/estudio_tangente_design_logo-cliente_appto66x66px.jpg">
                     <h4 class="beige">
-                        Empresa
+                        Appto
                     </h4>
                     <h6 class="beige">
-                        Comentario: ontactLorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod 
+                        TanGente es una empresa ágil y resolutiva, para solucionar cualquier problema de diseño, los contactas y enseguida te proponen una solución posible y trabajan a la par de uno con rapidez.
                     </h6>
                     <h5 class="beige">
-                        Nombre
+                        Juan Manso
                     </h5>
                 </div>            
                 <div class="card card__grisC col-12">
-                    <img src="assets/redonda_a_sacar.png">
+                    <img src="assets/estudio_tangente_design_logo-cliente_quienvino66x66px.jpg">
                     <h4 class="beige">
-                        Empresa
+                        QuienVino
                     </h4>
                     <h6 class="beige">
-                        Comentario: ontactLorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod 
+                        Sólo podemos decir que, a lo largo de los años, hemos estado encantados del servicio brindado. Además de ser unas personas con amplios conocimientos, educados y sobre todo totalmente transparentse. Nosotros no hemos dudado en recomendar sus servicios a muchas personas.
                     </h6>
                     <h5 class="beige">
-                        Nombre
+                        Roberto Gomez
                     </h5>
                 </div>            
                 <div class="card card__grisC col-12">
-                    <img src="assets/redonda_a_sacar.png">
+                    <img src="assets/estudio_tangente_design_logo-cliente_orembae66x66px.jpg">
                     <h4 class="beige">
-                        Empresa
+                        Orembae
                     </h4>
                     <h6 class="beige">
-                        Comentario: ontactLorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod 
+                        Estudio TanGente me prestó un servicio muy personalizado, satisfaciendo exactamente todas mis expectativas con respecto a armar la página web ideal para mi servicio de viajes. Los recomiendo altamente.
                     </h6>
                     <h5 class="beige">
-                        Nombre
+                        Sandra Mianovich
                     </h5>
                 </div>            
                 <div class="card card__grisC col-12">
-                    <img src="assets/redonda_a_sacar.png">
+                    <img src="assets/estudio_tangente_design_logo-cliente_pw66x66px.jpg">
                     <h4>
-                        Empresa
+                        Estudio PW
                     </h4>
                     <h6 class="beige">
-                        Comentario: ontactLorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod 
+                        Hemos trabajado desde el año 2019 y siempre lo hemos encontrado muy profesionales, honestos y eficientes. Esperamos seguir creciendo con ellos en el futuro”
                     </h6>
                     <h5>
-                        Nombre
+                        Jorge Lira
                     </h5>
                 </div>            
             </div>
