--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,6 +18,7 @@
     <meta name="geo.placename" content="Buenos Aires" />
     <meta name="geo.position" content="-34.587401;-58.428726" />
     <meta name="ICBM" content="-34.587401, -58.428726" />
+    <meta name="keywords" content="tangente diseño, tangente diseno, tangentediseño, tangentediseno, estudio de diseño, diseño grafico, diseño web, marketing online, animacion, estudio de diseño grafico, estudio de diseño web, estudio de animacion, Buenos Aires, Argentina, Cintia Olave, Belen Santis, Gisela Drezek, Johanna Gonzalez, Fererico Ulicki, Ezequiel Garcia, diseñador, diseño, bienal, diseño grafico, comunicación visual, impresiones, imprenta, packaging, gigantografias, publicidad, agencia, via publica, estampados, ploteos, flyer, flyers, flayer, flayers, volantes, editorial, web, hosting,  diseño, design, impresiones, eventos, promociones, marketing, comunicacion estrategica, digital, marketing digital, imagen corporativa, diseño integral, comunicacion, compañía, pop, point of purchase, multimedia, interactivo, ilustraciones, retoque fotografico, fotografia, comunicacion, agencia de comunicacion, agencias de publicidad, publicidad promocion, master diseño web, diseño editorial, diseño digital, diseño industrial, diseño 3d, trade marketing, imagen corporativa, estudios diseño grafico, master diseño grafico, visual communications, stand, stands, estands, mkt, banner, baner, banners, baners">
     
     <link rel="stylesheet" href="normalize.css"></link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"></link>
@@ -126,43 +127,54 @@
         </article>   
     </section>
     <section class="sec container-fluid" id="ruleta">
-            <div class="card card__grisC col-12">
-                <img src="../assets/redonda_a_sacar.png">
-                <h4 class="beige">
-                    Empresa
-                </h4>
-                <h6 class="beige">
-                    Comentario: ontactLorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod 
-                </h6>
-                <h5 class="beige">
-                    Nombre
-                </h5>
+        <div class="card card__grisC col-12">
+            <img src="../assets/estudio_tangente_design_logo-cliente_appto66x66px.jpg">
+            <h4 class="beige">
+                Appto
+            </h4>
+            <h6 class="beige">
+                TanGente es una empresa ágil y resolutiva, para solucionar cualquier problema de diseño, los contactas y enseguida te proponen una solución posible y trabajan a la par de uno con rapidez.
+            </h6>
+            <h5 class="beige">
+                Juan Manso
+            </h5>
             </div>            
-            <div class="card card__grisC col-12">
-                <img src="../assets/redonda_a_sacar.png">
-                <h4 class="beige">
-                    Empresa
-                </h4>
-                <h6 class="beige">
-                    Comentario: ontactLorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod 
-                </h6>
-                <h5 class="beige">
-                    Nombre
-                </h5>
-            </div>            
-            <div class="card card__grisC col-12">
-                <img src="../assets/redonda_a_sacar.png">
-                <h4 class="beige">
-                    Empresa
-                </h4>
-                <h6 class="beige">
-                    Comentario: ontactLorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod 
-                </h6>
-                <h5 class="beige">
-                    Nombre
-                </h5>
-            </div>
-            
+        <div class="card card__grisC col-12">
+            <img src="../assets/estudio_tangente_design_logo-cliente_quienvino66x66px.jpg">
+            <h4 class="beige">
+                QuienVino
+            </h4>
+            <h6 class="beige">
+                Sólo podemos decir que, a lo largo de los años, hemos estado encantados del servicio brindado. Además de ser unas personas con amplios conocimientos, educados y sobre todo totalmente transparentse. Nosotros no hemos dudado en recomendar sus servicios a muchas personas.
+            </h6>
+            <h5 class="beige">
+                Roberto Gomez
+            </h5>
+        </div>            
+        <div class="card card__grisC col-12">
+            <img src="../assets/estudio_tangente_design_logo-cliente_orembae66x66px.jpg">
+            <h4 class="beige">
+                Orembae
+            </h4>
+            <h6 class="beige">
+                Estudio TanGente me prestó un servicio muy personalizado, satisfaciendo exactamente todas mis expectativas con respecto a armar la página web ideal para mi servicio de viajes. Los recomiendo altamente.
+            </h6>
+            <h5 class="beige">
+                Sandra Mianovich
+            </h5>
+        </div> 
+        <div class="card card__grisC col-12">
+            <img src="../assets/estudio_tangente_design_logo-cliente_pw66x66px.jpg">
+            <h4>
+                Estudio PW
+            </h4>
+            <h6 class="beige">
+                Hemos trabajado desde el año 2019 y siempre lo hemos encontrado muy profesionales, honestos y eficientes. Esperamos seguir creciendo con ellos en el futuro”
+            </h6>
+            <h5>
+                Jorge Lira
+            </h5>
+        </div>        
     </section>
     <section class="sec">
         <h3 class="beige center corto">Si aún tenes alguna duda podes pasar por estos links para ver quienes somos y que hacemos.</h3>
