--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="shorcut icon" type="image/x-icon" href="../assets/tangente_favicon.ico">
+    <!-- metas -->
     <title>Contacto</title>
     <meta name="description" content="Estudio de diseño gráfico, diseño web, marketing digital, identidad corporativa e ilustración en Buenos Aires, Argentina">
     <meta name="subject" content="Diseño gráfico en todas sus variantes" />
@@ -19,17 +20,19 @@
     <meta name="geo.position" content="-34.587401;-58.428726" />
     <meta name="ICBM" content="-34.587401, -58.428726" />
     <meta name="keywords" content="tangente diseño, tangente diseno, tangentediseño, tangentediseno, estudio de diseño, diseño grafico, diseño web, marketing online, animacion, estudio de diseño grafico, estudio de diseño web, estudio de animacion, Buenos Aires, Argentina, Cintia Olave, Belen Santis, Gisela Drezek, Johanna Gonzalez, Fererico Ulicki, Ezequiel Garcia, diseñador, diseño, bienal, diseño grafico, comunicación visual, impresiones, imprenta, packaging, gigantografias, publicidad, agencia, via publica, estampados, ploteos, flyer, flyers, flayer, flayers, volantes, editorial, web, hosting,  diseño, design, impresiones, eventos, promociones, marketing, comunicacion estrategica, digital, marketing digital, imagen corporativa, diseño integral, comunicacion, compañía, pop, point of purchase, multimedia, interactivo, ilustraciones, retoque fotografico, fotografia, comunicacion, agencia de comunicacion, agencias de publicidad, publicidad promocion, master diseño web, diseño editorial, diseño digital, diseño industrial, diseño 3d, trade marketing, imagen corporativa, estudios diseño grafico, master diseño grafico, visual communications, stand, stands, estands, mkt, banner, baner, banners, baners">
-    
+    <!-- fin metas -->
+    <!--stylesheet-->
     <link rel="stylesheet" href="normalize.css"></link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"></link>
     <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="../style.css"></link>
-    <link rel="icon" type="image/x-icon" href="assets/tangente_favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="stylesheet" href="../style.css"></link>
+    <!--fin stylesheet-->
 </head>
 <body>
+    <!--header-->
     <header class="pershead">
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
@@ -56,20 +59,25 @@
             </div>
         </nav>      
     </header>
+    <!--fin header-->
+
+    <!--boton up-->
     <div class="up">
         <a href="#"> 
             <i class="fa-sharp fa-solid fa-circle-up beige"></i>
         </a>
     </div>
+    <!--fin boton up-->
 
-    <section id="cabezera">
-    </section>
+    <!--cabezera-->
+    <section class="cabezera"></section>
+    <!--fin cabezera-->
 
-    <h2 class="verde center">Contacto</h2>
-
+    <!--sec contacto-->    
     <section class="cierre container-fluid">
+        <h2 class="verde center">Contacto</h2>
         <article class="sec">
-            <div class="c2">
+            <div data-aos="fade-right" class="c2" id="formulariocontacto">
                 <form action="netlify" method="post" enctype="text/plain" netlify>
                     <input class="casillas" id="names" name="names" type="text" required placeholder="Nombre">
                     <br>
@@ -80,7 +88,9 @@
                     <input type="submit" value="Enviar" class="buttons button__green enviar">
                 </form>
             </div>
-            <div class="c2" id="contacto">
+            
+            <!--links contacto-->    
+            <div data-aos="fade-left" class="c2" id="contacto">
                 <div class="icon_field icon_field__2columnas">
                     <a href="https://www.facebook.com/tangentediseno/" target="_blank" class="noline">
                         <i class="fa-brands fa-facebook-f icon fa-lg icon icon__verde"></i>
@@ -124,66 +134,53 @@
                     </a>
                 </div> 
             </div>
+            <!--fin links contacto-->    
         </article>   
     </section>
-    <section class="sec container-fluid" id="ruleta">
+    <!--fin sec contacto-->    
+
+    <!--recomendaciones-->      
+    <section data-aos="zoom-in-up" class="sec container-fluid" id="ruleta">
         <div class="card card__grisC col-12">
             <img src="../assets/estudio_tangente_design_logo-cliente_appto66x66px.jpg">
-            <h4 class="beige">
-                Appto
-            </h4>
-            <h6 class="beige">
-                TanGente es una empresa ágil y resolutiva, para solucionar cualquier problema de diseño, los contactas y enseguida te proponen una solución posible y trabajan a la par de uno con rapidez.
-            </h6>
-            <h5 class="beige">
-                Juan Manso
-            </h5>
-            </div>            
+            <h4 class="beige">Appto</h4>
+            <h6 class="beige">TanGente es una empresa ágil y resolutiva, para solucionar cualquier problema de diseño, los contactas y enseguida te proponen una solución posible y trabajan a la par de uno con rapidez.</h6>
+            <h5 class="beige">Juan Manso</h5>
+        </div>            
         <div class="card card__grisC col-12">
             <img src="../assets/estudio_tangente_design_logo-cliente_quienvino66x66px.jpg">
-            <h4 class="beige">
-                QuienVino
-            </h4>
-            <h6 class="beige">
-                Sólo podemos decir que, a lo largo de los años, hemos estado encantados del servicio brindado. Además de ser unas personas con amplios conocimientos, educados y sobre todo totalmente transparentse. Nosotros no hemos dudado en recomendar sus servicios a muchas personas.
-            </h6>
-            <h5 class="beige">
-                Roberto Gomez
-            </h5>
+            <h4 class="beige">QuienVino</h4>
+            <h6 class="beige">Sólo podemos decir que, a lo largo de los años, hemos estado encantados del servicio brindado. Además de ser unas personas con amplios conocimientos, educados y sobre todo transparentes.</h6>
+            <h5 class="beige">Roberto Gomez</h5>
         </div>            
         <div class="card card__grisC col-12">
             <img src="../assets/estudio_tangente_design_logo-cliente_orembae66x66px.jpg">
-            <h4 class="beige">
-                Orembae
-            </h4>
-            <h6 class="beige">
-                Estudio TanGente me prestó un servicio muy personalizado, satisfaciendo exactamente todas mis expectativas con respecto a armar la página web ideal para mi servicio de viajes. Los recomiendo altamente.
-            </h6>
-            <h5 class="beige">
-                Sandra Mianovich
-            </h5>
+            <h4 class="beige">Orembae</h4>
+            <h6 class="beige">Estudio TanGente me prestó un servicio muy personalizado, satisfaciendo exactamente todas mis expectativas con respecto a armar la página web ideal para mi servicio de viajes.</h6>
+            <h5 class="beige">Sandra Mianovich</h5>
         </div> 
         <div class="card card__grisC col-12">
             <img src="../assets/estudio_tangente_design_logo-cliente_pw66x66px.jpg">
-            <h4>
-                Estudio PW
-            </h4>
-            <h6 class="beige">
-                Hemos trabajado desde el año 2019 y siempre lo hemos encontrado muy profesionales, honestos y eficientes. Esperamos seguir creciendo con ellos en el futuro”
-            </h6>
-            <h5>
-                Jorge Lira
-            </h5>
+            <h4 class="beige">Estudio PW</h4>
+            <h6 class="beige">Hemos trabajado desde el año 2019 y siempre lo hemos encontrado muy profesionales, honestos y eficientes. Esperamos seguir creciendo con ellos en el futuro”</h6>
+            <h5 class="beige">Jorge Lira</h5>
         </div>        
     </section>
-    <section class="sec">
-        <h3 class="beige center corto">Si aún tenes alguna duda podes pasar por estos links para ver quienes somos y que hacemos.</h3>
+    <!--fin recomendaciones-->      
+
+    <!--dudas-->    
+    <section class="sec esp-bot">
+        <h3 data-aos="zoom-in-up" class="beige center corto">Si aún tenes alguna duda podes pasar por estos links para ver quienes somos y que hacemos.</h3>
         <article id="botonesfin" class="sec flex">
-            <a href="quienesomos.html" class="buttons button__violeta center">Quienes Somos</a>
-            <a href="servicios.html" class="buttons button__violeta center">Servicios</a>
-            <a href="portfolio.html" class="buttons button__violeta center">Portfolio</a>
+            <a data-aos="zoom-in-up" href="quienesomos.html" class="buttons button__violeta center">Quienes Somos</a>
+            <a data-aos="zoom-in-up" href="servicios.html" class="buttons button__violeta center">Servicios</a>
+            <a data-aos="zoom-in-up" href="portfolio.html" class="buttons button__violeta center">Portfolio</a>
         </article>
     </section>
+    <!--fin dudas-->
+
+
+    <!--footer-->    
     <footer>
         <div class="container-fluid">
             <img src="../assets/tangente_estudio_dise&ntildeo_design_logo_marca_branding_small.png" alt="Estudio TanGente Logo Chico">
@@ -206,9 +203,12 @@
             </div>
         </div>    
     </footer>
+    <!--fin footer-->
+
+    <!--scripts-->    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="js/wow.min.js"></script>
-    <script>
-    new WOW().init();
-    </script>
+    <script>new WOW().init();</script>
+    <script>AOS.init();</script>
+    <!--fin scripts-->
 </body>
