--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="shorcut icon" type="image/x-icon" href="../assets/tangente_favicon.ico">
+    <!-- metas -->
     <title>Portfolio</title>
     <meta name="description" content="Estudio de diseño gráfico, diseño web, marketing digital, identidad corporativa e ilustración en Buenos Aires, Argentina">
     <meta name="subject" content="Diseño gráfico en todas sus variantes" />
@@ -19,15 +20,19 @@
     <meta name="geo.position" content="-34.587401;-58.428726" />
     <meta name="ICBM" content="-34.587401, -58.428726" />
     <meta name="keywords" content="tangente diseño, tangente diseno, tangentediseño, tangentediseno, estudio de diseño, diseño grafico, diseño web, marketing online, animacion, estudio de diseño grafico, estudio de diseño web, estudio de animacion, Buenos Aires, Argentina, Cintia Olave, Belen Santis, Gisela Drezek, Johanna Gonzalez, Fererico Ulicki, Ezequiel Garcia, diseñador, diseño, bienal, diseño grafico, comunicación visual, impresiones, imprenta, packaging, gigantografias, publicidad, agencia, via publica, estampados, ploteos, flyer, flyers, flayer, flayers, volantes, editorial, web, hosting,  diseño, design, impresiones, eventos, promociones, marketing, comunicacion estrategica, digital, marketing digital, imagen corporativa, diseño integral, comunicacion, compañía, pop, point of purchase, multimedia, interactivo, ilustraciones, retoque fotografico, fotografia, comunicacion, agencia de comunicacion, agencias de publicidad, publicidad promocion, master diseño web, diseño editorial, diseño digital, diseño industrial, diseño 3d, trade marketing, imagen corporativa, estudios diseño grafico, master diseño grafico, visual communications, stand, stands, estands, mkt, banner, baner, banners, baners">
-
+    <!-- fin metas -->
+    <!--stylesheet-->
     <link rel="stylesheet" href="normalize.css"></link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"></link>
     <link rel="stylesheet" href="css/animate.css">
-    <link rel="icon" type="image/x-icon" href="assets/tangente_favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="../style.css"></link>
+    <!--fin stylesheet-->
 </head>
 <body>
+    <!--header-->
     <header class="pershead">
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
@@ -54,13 +59,21 @@
             </div>
         </nav>      
     </header>
+    <!--fin header-->
+
+    <!--boton up-->
     <div class="up">
         <a href="#"> 
             <i class="fa-sharp fa-solid fa-circle-up beige"></i>
         </a>
     </div>
-    <section id="cabezera">
-    </section>
+    <!--fin boton up-->
+
+    <!--cabezera-->
+    <section class="cabezera"></section>
+    <!--fin-cabezera-->
+
+    <!--botonera-->
     <section class="sec container-fluid">
         <h2 class="verde center">Portfolio</h2>
         <article class="filtros container-fluid">
@@ -80,20 +93,22 @@
                 <i class="fa-solid fa-computer fa-lg icon icon__beige"></i>
                 <h4 class="beige center">Diseño Web</h4>
             </a>   
-    
             <a href="#varios" class="marcadores">
                 <i class="fa-solid fa-basket-shopping fa-lg icon icon__beige"></i>
                 <h4 class="beige center">Varios</h4>
             </a>
         </article>
     </section>
+    <!--fin botonera-->
+
+    <!--port branding-->
     <section class="sec port_space" id="branding">
         <div class="titulo_port" >
             <i class="fa-solid fa-copyright fa-lg icon icon__beige"></i>
             <h3 class="beige">Branding</h3>
         </div>
             <!-- Carousel -->
-        <div id="brand" class="carousel slide" data-bs-ride="carousel">
+        <div data-aos="zoom-in-up" id="brand" class="carousel slide" data-bs-ride="carousel">
 
                 <!-- Indicators/dots -->
             <div class="carousel-indicators">
@@ -231,13 +246,16 @@
             </div>
         </div>    
     </section>
+    <!--fin port branding-->
+
+    <!--port presentaciones-->    
     <section class="sec port_space" id="presentaciones">
         <div class="titulo_port">
             <i class="fa-solid fa-person-chalkboard fa-lg icon icon__beige"></i>
             <h3 class="beige">Presentaciones</h3>
         </div>
-            <!-- Carousel -->
-            <div id="pres" class="carousel slide" data-bs-ride="carousel">
+        <!-- Carousel -->
+        <div data-aos="zoom-in-up" id="pres" class="carousel slide" data-bs-ride="carousel">
 
                 <!-- Indicators/dots -->
             <div class="carousel-indicators">
@@ -319,13 +337,16 @@
             </div>
         </div>    
     </section>
+    <!--fin port presentaciones-->    
+
+    <!--port redes-->       
     <section class="sec port_space" id="redes">
         <div class="titulo_port">
             <i class="fa-solid fa-comments fa-lg icon icon__beige"></i>
             <h3 class="beige">Redes Sociales</h3>
         </div>
         <!-- Carousel -->
-        <div id="rrss" class="carousel slide" data-bs-ride="carousel">
+        <div data-aos="zoom-in-up" id="rrss" class="carousel slide" data-bs-ride="carousel">
 
             <!-- Indicators/dots -->
             <div class="carousel-indicators">
@@ -391,13 +412,16 @@
             </div>
         </div>  
     </section>
+    <!--fin port redes-->   
+
+    <!--port web-->   
     <section class="sec port_space" id="motion">
         <div class="titulo_port">
             <i class="fa-solid fa-circle-play fa-lg icon icon__beige"></i>
             <h3 class="beige">Diseño Web</h3>
         </div>
                 <!-- Carousel -->
-        <div id="webd" class="carousel slide" data-bs-ride="carousel">
+        <div data-aos="zoom-in-up" id="webd" class="carousel slide" data-bs-ride="carousel">
                     <!-- Indicators/dots -->
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#webd" data-bs-slide-to="0" class="active"></button>
@@ -535,13 +559,16 @@
             </button>
         </div>
     </section>
+    <!--fin port web-->
+
+    <!--port varios-->       
     <section class="sec port_space" id="varios">
         <div class="titulo_port">
             <i class="fa-solid fa-basket-shopping fa-lg icon icon__beige"></i>
             <h3 class="beige">Varios</h3>
         </div>
                 <!-- Carousel -->
-        <div id="vari" class="carousel slide" data-bs-ride="carousel">
+        <div data-aos="zoom-in-up" id="vari" class="carousel slide" data-bs-ride="carousel">
                     <!-- Indicators/dots -->
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#vari" data-bs-slide-to="0" class="active"></button>
@@ -599,6 +626,9 @@
             </button>
         </div>
     </section>
+    <!--fin port varios-->  
+
+    <!--footer-->   
     <footer>
         <div class="container-fluid">
             <img src="../assets/tangente_estudio_dise&ntildeo_design_logo_marca_branding_small.png" alt="Estudio TanGente Logo Chico">
@@ -621,9 +651,12 @@
             </div>
         </div>    
     </footer>
+    <!--fin footer-->
+    
+    <!--scripts-->    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="js/wow.min.js"></script>
-    <script>
-    new WOW().init();
-    </script>
+    <script>new WOW().init();</script>
+    <script>AOS.init();</script>
+    <!--fin scripts-->
 </body>
