--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="shorcut icon" type="image/x-icon" href="../assets/tangente_favicon.ico">
+    <!-- metas -->
     <title>Servicios</title>
     <meta name="description" content="Estudio de diseño gráfico, diseño web, marketing digital, identidad corporativa e ilustración en Buenos Aires, Argentina">
     <meta name="subject" content="Diseño gráfico en todas sus variantes" />
@@ -19,17 +20,19 @@
     <meta name="geo.position" content="-34.587401;-58.428726" />
     <meta name="ICBM" content="-34.587401, -58.428726" />
     <meta name="keywords" content="tangente diseño, tangente diseno, tangentediseño, tangentediseno, estudio de diseño, diseño grafico, diseño web, marketing online, animacion, estudio de diseño grafico, estudio de diseño web, estudio de animacion, Buenos Aires, Argentina, Cintia Olave, Belen Santis, Gisela Drezek, Johanna Gonzalez, Fererico Ulicki, Ezequiel Garcia, diseñador, diseño, bienal, diseño grafico, comunicación visual, impresiones, imprenta, packaging, gigantografias, publicidad, agencia, via publica, estampados, ploteos, flyer, flyers, flayer, flayers, volantes, editorial, web, hosting,  diseño, design, impresiones, eventos, promociones, marketing, comunicacion estrategica, digital, marketing digital, imagen corporativa, diseño integral, comunicacion, compañía, pop, point of purchase, multimedia, interactivo, ilustraciones, retoque fotografico, fotografia, comunicacion, agencia de comunicacion, agencias de publicidad, publicidad promocion, master diseño web, diseño editorial, diseño digital, diseño industrial, diseño 3d, trade marketing, imagen corporativa, estudios diseño grafico, master diseño grafico, visual communications, stand, stands, estands, mkt, banner, baner, banners, baners">
-
+    <!-- fin metas -->
+    <!--stylesheet-->
     <link rel="stylesheet" href="normalize.css"></link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"></link>
     <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="../style.css"></link>
-    <link rel="icon" type="image/x-icon" href="assets/tangente_favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="stylesheet" href="../style.css"></link>
+    <!--fin stylesheet-->
 </head>
 <body>
+    <!--header-->
     <header class="pershead">
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
@@ -56,13 +59,21 @@
             </div>
         </nav>      
     </header>
+    <!--fin header-->
+
+    <!--boton up-->
     <div class="up">
         <a href="#"> 
             <i class="fa-sharp fa-solid fa-circle-up beige"></i>
         </a>
     </div>
-    <section id="cabezera">
-    </section>
+    <!--fin boton up-->
+
+    <!--cabezera-->
+    <section class="cabezera"></section>
+    <!--fin-cabezera-->
+        
+    <!--servicios-->
     <h2 class="verde center">Servcios</h2>
     <section class="sec container-fluid">
         <div class="row trio">
@@ -74,7 +85,7 @@
             <div class="perfil col-md-3">
                 <img class="retrato" src="../assets/estudio_tangente_design_servicios_web-design.jpg">
                 <h4 class="verde center">Sitios Web</h4>
-                <h6 class="beige center">Diseño y programación de sitios web modernos y atractivos para todas las plataformas.            </h6>
+                <h6 class="beige center">Diseño y programación de sitios web modernos y atractivos para todas las plataformas.</h6>
             </div>
             <div class="perfil col-md-3">
                 <img class="retrato" src="../assets/estudio_tangente_design_servicios_motion-graphics.jpg">
@@ -83,13 +94,16 @@
             </div>
         </div>
     </section>
-    <section class="sec container" id="cuadro">
-        <div class="row trio container-fluid">
+    <!--fin servicios-->
+
+    <!--cuadro-->
+    <section data-aos="zoom-in-up" class="sec container" id="cuadro">
+        <div class="row container-fluid">
             <h3 class="beige">Otros</h3>
             <article id="otros">
                 <div class="icon_field icon-serv">
                     <i class="fa-solid fa-comments fa-lg icon icon__beige-v"></i>
-                        <h6 class="beige">Redes Sociales</h6>
+                    <h6 class="beige">Redes Sociales</h6>
                 </div>
                 <div class="icon_field icon-serv">
                     <i class="fa-solid fa-file-image fa-lg icon icon__beige-v"></i>
@@ -97,7 +111,7 @@
                 </div>
                 <div class="icon_field icon-serv">
                     <i class="fa-solid fa-compact-disc fa-lg icon icon__beige-v"></i>
-                        <h6 class="beige">Tapas de disco</h6>
+                    <h6 class="beige">Tapas de disco</h6>
                 </div>
                 <div class="icon_field icon-serv">
                     <i class="fa-solid fa-person-chalkboard fa-lg icon icon__beige-v"></i>
@@ -113,6 +127,9 @@
             </article>
         </div>
     </section>
+    <!--fin cuadro-->
+
+    <!--footer-->   
     <footer>
         <div class="container-fluid">
             <img src="../assets/tangente_estudio_dise&ntildeo_design_logo_marca_branding_small.png" alt="Estudio TanGente Logo Chico">
@@ -135,9 +152,12 @@
             </div>
         </div>    
     </footer>
+    <!--fin footer-->
+
+    <!--scripts-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="js/wow.min.js"></script>
-    <script>
-    new WOW().init();
-    </script>
+    <script>new WOW().init();</script>
+    <script>AOS.init();</script>
+    <!--fin scripts-->    
 </body>
