--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <section class="cierre cierre__fondo sec container-fluid">
         <h2 class="verde center">Contacto</h2>
         <article class="sec">
-            <div data-aos="fade-right" class="c2">
+            <div data-aos="zoom-in-down" class="c2">
                 <form action="netlify" method="post" enctype="text/plain" netlify>
                     <input class="casillas" id="names" name="names" type="text" required placeholder="Nombre">
                     <input class="casillas" id="email" name="email" type="email" required placeholder="Email">
@@ -122,7 +122,7 @@
                     </a>
                 </div>
             </div>
-            <div data-aos="fade-left" class="c2" id="final">
+            <div data-aos="zoom-in-down" class="c2" id="final">
                 <div class="card card__grisC col-12">
                     <img src="assets/estudio_tangente_design_logo-cliente_appto66x66px.jpg">
                     <h4 class="beige">Appto</h4>
