--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -103,7 +103,7 @@
 
     <!--port branding-->
     <section class="sec port_space" id="branding">
-        <div class="titulo_port" >
+        <div data-aos="fade-right" class="titulo_port" >
             <i class="fa-solid fa-copyright fa-lg icon icon__beige"></i>
             <h3 class="beige">Branding</h3>
         </div>
@@ -250,7 +250,7 @@
 
     <!--port presentaciones-->    
     <section class="sec port_space" id="presentaciones">
-        <div class="titulo_port">
+        <div data-aos="fade-right" class="titulo_port">
             <i class="fa-solid fa-person-chalkboard fa-lg icon icon__beige"></i>
             <h3 class="beige">Presentaciones</h3>
         </div>
@@ -341,7 +341,7 @@
 
     <!--port redes-->       
     <section class="sec port_space" id="redes">
-        <div class="titulo_port">
+        <div data-aos="fade-right" class="titulo_port">
             <i class="fa-solid fa-comments fa-lg icon icon__beige"></i>
             <h3 class="beige">Redes Sociales</h3>
         </div>
@@ -416,7 +416,7 @@
 
     <!--port web-->   
     <section class="sec port_space" id="motion">
-        <div class="titulo_port">
+        <div data-aos="fade-right" class="titulo_port">
             <i class="fa-solid fa-circle-play fa-lg icon icon__beige"></i>
             <h3 class="beige">Diseño Web</h3>
         </div>
@@ -563,7 +563,7 @@
 
     <!--port varios-->       
     <section class="sec port_space" id="varios">
-        <div class="titulo_port">
+        <div data-aos="fade-right" class="titulo_port">
             <i class="fa-solid fa-basket-shopping fa-lg icon icon__beige"></i>
             <h3 class="beige">Varios</h3>
         </div>
