--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -99,32 +99,34 @@
     <!--cuadro-->
     <section data-aos="zoom-in-up" class="sec container" id="cuadro">
         <div class="row container-fluid">
+            <div>
             <h3 class="beige">Otros</h3>
-            <article id="otros">
-                <div class="icon_field icon-serv">
-                    <i class="fa-solid fa-comments fa-lg icon icon__beige-v"></i>
-                    <h6 class="beige">Redes Sociales</h6>
-                </div>
-                <div class="icon_field icon-serv">
-                    <i class="fa-solid fa-file-image fa-lg icon icon__beige-v"></i>
-                    <h6 class="beige">Flyers y folletería</h6>
-                </div>
-                <div class="icon_field icon-serv">
-                    <i class="fa-solid fa-compact-disc fa-lg icon icon__beige-v"></i>
-                    <h6 class="beige">Tapas de disco</h6>
-                </div>
-                <div class="icon_field icon-serv">
-                    <i class="fa-solid fa-person-chalkboard fa-lg icon icon__beige-v"></i>
-                    <h6 class="beige">Presentaciones</h6>
-                </div>
-                <div class="icon_field icon-serv">
-                    <i class="fa-solid fa-book fa-lg icon icon__beige-v"></i>
-                    <h6 class="beige">Editorial</h6>
-                </div>
-                <div class="icon_field icon-serv">
-                    <i class="fa-solid fa-calendar-week fa-lg icon icon__beige-v"></i>
-                    <h6 class="beige">Banners</h6>
-            </article>
+                <article id="otros">
+                    <div class="icon_field icon-serv">
+                        <i class="fa-solid fa-comments fa-lg icon icon__beige-v"></i>
+                        <h6 class="beige">Redes Sociales</h6>
+                    </div>
+                    <div class="icon_field icon-serv">
+                        <i class="fa-solid fa-file-image fa-lg icon icon__beige-v"></i>
+                        <h6 class="beige">Flyers y folletería</h6>
+                    </div>
+                    <div class="icon_field icon-serv">
+                        <i class="fa-solid fa-compact-disc fa-lg icon icon__beige-v"></i>
+                        <h6 class="beige">Tapas de disco</h6>
+                    </div>
+                    <div class="icon_field icon-serv">
+                        <i class="fa-solid fa-person-chalkboard fa-lg icon icon__beige-v"></i>
+                        <h6 class="beige">Presentaciones</h6>
+                    </div>
+                    <div class="icon_field icon-serv">
+                        <i class="fa-solid fa-book fa-lg icon icon__beige-v"></i>
+                        <h6 class="beige">Editorial</h6>
+                    </div>
+                    <div class="icon_field icon-serv">
+                        <i class="fa-solid fa-calendar-week fa-lg icon icon__beige-v"></i>
+                        <h6 class="beige">Banners</h6>
+                </article>
+            </div>
         </div>
     </section>
     <!--fin cuadro-->
