--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -77,7 +77,7 @@
     <section class="cierre container-fluid">
         <h2 class="verde center">Contacto</h2>
         <article class="sec">
-            <div data-aos="fade-right" class="c2" id="formulariocontacto">
+            <div data-aos="zoom-in-up" class="c2" id="formulariocontacto">
                 <form action="netlify" method="post" enctype="text/plain" netlify>
                     <input class="casillas" id="names" name="names" type="text" required placeholder="Nombre">
                     <br>
@@ -90,7 +90,7 @@
             </div>
             
             <!--links contacto-->    
-            <div data-aos="fade-left" class="c2" id="contacto">
+            <div data-aos="zoom-in-up" class="c2" id="contacto">
                 <div class="icon_field icon_field__2columnas">
                     <a href="https://www.facebook.com/tangentediseno/" target="_blank" class="noline">
                         <i class="fa-brands fa-facebook-f icon fa-lg icon icon__verde"></i>
